nixidy/generated/prod/games-webdav/Deployment-games-webdav.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: games-webdav
    app.kubernetes.io/instance: games-webdav
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: games-webdav
  name: games-webdav
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: games-webdav
      app.kubernetes.io/instance: games-webdav
      app.kubernetes.io/name: games-webdav
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 884a8913bcfdd81cfce1965731d0c116552bf5bf33db0c5c8bbb25b66431b030
      labels:
        app.kubernetes.io/controller: games-webdav
        app.kubernetes.io/instance: games-webdav
        app.kubernetes.io/name: games-webdav
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - --config
            - /config/webdav.yml
          image: hacdias/webdav:v5.11.3@sha256:ff21e4ed74fa70b8c41b78e8f06af3ad7cc488dab9678b5508838ca963abe621
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: games-webdav
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config/webdav.yml
              name: config
              readOnly: true
              subPath: webdav.yml
            - mountPath: /data
              name: data
              readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: games-webdav
      volumes:
        - configMap:
            name: games-webdav
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: media-games
