nixidy/generated/prod/games-webdav/Service-games-webdav.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: games-webdav
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: games-webdav
    app.kubernetes.io/service: games-webdav
  name: games-webdav
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: games-webdav
    app.kubernetes.io/instance: games-webdav
    app.kubernetes.io/name: games-webdav
  type: ClusterIP
