nixidy/generated/prod/games-webdav/HTTPRoute-games-webdav.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: games-webdav
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: games-webdav
  name: games-webdav
  namespace: media
spec:
  hostnames:
    - games.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: games-webdav
          namespace: media
          port: 8080
          weight: 1
